--- a/background.html
+++ b/background.html
@@ -848,37 +848,6 @@ TweetManager.prototype = {
   }
 }
 
-TweetManager.instance = new TweetManager();
-
-var waitingFirstRequest = true;
-var selectedResponse = null;
-var biggestArea = -1;
-chrome.extension.onRequest.addListener(function(request, sender, sendResponse) {
-  if(request.cb_requesting_tweets) {
-    if(waitingFirstRequest) {
-      waitingFirstRequest = false;
-      setTimeout(function() {
-        if(selectedResponse) {
-          selectedResponse({
-            tweets: TweetManager.instance.injectTweets,
-            nameAttribute: OptionsBackend.get('name_attribute'),
-            extensionId: location.host,
-            fadeTimeout: OptionsBackend.get('notification_fade_timeout')
-          });
-        }
-        waitingFirstRequest = true;
-        TweetManager.instance.injectTweets = null;
-        biggestArea = -1;
-      }, 200);
-    }
-    var area = request.frame_area;
-    if(area >= biggestArea) {
-      biggestArea = area;
-      selectedResponse = sendResponse;
-    }
-  }
-});
-
 /* Clean up old versions mess */
 localStorage.removeItem('password');
 localStorage.removeItem('logged');
@@ -900,24 +869,30 @@ function compareVersions(v1, v2) {
 }
 
 function checkVersionChanges(manifest) {
-  var currentVersion = manifest.version.split('.');
-  var storageVersion = localStorage['version'];
-  if(storageVersion) {
-    storageVersion = JSON.parse(storageVersion);
-  }
-
-  if(compareVersions(currentVersion, storageVersion) != 0) {
-    // if last version is < 1.3.0
-    if(compareVersions(storageVersion, [1, 3, 0]) < 0) {
-      //Old default refresh interval, let's update it for the new version
-      if(OptionsBackend.get('home_refresh_interval') == 60000) {
-        var options = OptionsBackend.load();
-        options['home_refresh_interval'] = OptionsBackend.defaultOptions['home_refresh_interval'];
-        OptionsBackend.save(options);
-      }
+  try {
+    var currentVersion = manifest.version.split('.');
+    var storageVersion = localStorage['version'];
+    if(storageVersion) {
+      storageVersion = JSON.parse(storageVersion);
     }
-    localStorage['version'] = JSON.stringify(currentVersion);
+
+    if(compareVersions(currentVersion, storageVersion) != 0) {
+      // if last version is < 1.3.0
+      if(compareVersions(storageVersion, [1, 3, 0]) < 0) {
+        //Old default refresh interval, let's update it for the new version
+        if(OptionsBackend.get('home_refresh_interval') == 60000) {
+          var options = OptionsBackend.load();
+          options['home_refresh_interval'] = OptionsBackend.defaultOptions['home_refresh_interval'];
+          OptionsBackend.save(options);
+        }
+      }
+      localStorage['version'] = JSON.stringify(currentVersion);
+    }
+  } catch(e) {
+    /* experimental code, something can go wrong */
+    console.log(e);
   }
+  initializeExtension();
 }
 
 $.ajax({
@@ -934,4 +909,38 @@ $.ajax({
     checkVersionChanges(JSON.parse(request.responseText));
   }
 });
+
+
+function initializeExtension() {
+  TweetManager.instance = new TweetManager();
+
+  var waitingFirstRequest = true;
+  var selectedResponse = null;
+  var biggestArea = -1;
+  chrome.extension.onRequest.addListener(function(request, sender, sendResponse) {
+    if(request.cb_requesting_tweets) {
+      if(waitingFirstRequest) {
+        waitingFirstRequest = false;
+        setTimeout(function() {
+          if(selectedResponse) {
+            selectedResponse({
+              tweets: TweetManager.instance.injectTweets,
+              nameAttribute: OptionsBackend.get('name_attribute'),
+              extensionId: location.host,
+              fadeTimeout: OptionsBackend.get('notification_fade_timeout')
+            });
+          }
+          waitingFirstRequest = true;
+          TweetManager.instance.injectTweets = null;
+          biggestArea = -1;
+        }, 200);
+      }
+      var area = request.frame_area;
+      if(area >= biggestArea) {
+        biggestArea = area;
+        selectedResponse = sendResponse;
+      }
+    }
+  });
+}
 </script>
