Allowing tweets to be marked as read by clicking, also letting users configure hovering timeout. Closes #61

--- a/background.html
+++ b/background.html
@@ -22,6 +22,8 @@ OptionsBackend = {
     name_attribute: 'name',
     request_timeout: 6000,
     compose_position: 'top',
+    hover_timeout: 1000,
+
     base_url: 'http://twitter.com/',
     base_signing_url: 'http://twitter.com/',
     base_authorize_url: 'https://twitter.com/oauth/authorize?oauth_token=',
