Only try to get tweets for a valid list timeline.

--- a/background.html
+++ b/background.html
@@ -822,6 +822,7 @@ TweetManager.prototype = {
 
   signout: function() {
     localStorage.removeItem('oauth_token_data');
+    localStorage.removeItem('selected_lists');
     this.stopAll();
     TweetManager.instance = new TweetManager();
   },
